[gd_scene load_steps=5 format=3 uid="uid://26ci8vg7yrsr"]

[ext_resource type="PackedScene" uid="uid://c5oimj5fri0ys" path="res://player.tscn" id="1_a5edp"]
[ext_resource type="Script" path="res://survivor_game_realm.gd" id="1_iuw1x"]
[ext_resource type="PackedScene" uid="uid://cjn82p6baicdi" path="res://tree_static.tscn" id="2_x10lc"]

[sub_resource type="Curve2D" id="Curve2D_n41tt"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1551, -192, 0, 0, 0, 0, 658, -172, 0, 0, 0, 0, 694, 1117, 0, 0, 0, 0, -1566, 1099)
}
point_count = 4

[node name="main_game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_iuw1x")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_scale = 10.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1920.0
offset_bottom = 1086.0
color = Color(0.909727, 1, 0.72512, 1)

[node name="Player1" parent="." instance=ExtResource("1_a5edp")]
position = Vector2(417, 495)

[node name="Path2D" type="Path2D" parent="Player1"]
position = Vector2(408, -461)
curve = SubResource("Curve2D_n41tt")

[node name="PathFollow2D" type="PathFollow2D" parent="Player1/Path2D"]
unique_name_in_owner = true
position = Vector2(-1551, -192)
rotation = 0.00905362

[node name="Timer" type="Timer" parent="Player1/Path2D"]
wait_time = 5.0
autostart = true

[node name="StaticBody2D" parent="." instance=ExtResource("2_x10lc")]
position = Vector2(404, 498)

[node name="StaticBody2D4" parent="." instance=ExtResource("2_x10lc")]
position = Vector2(1504, 210)

[node name="StaticBody2D5" parent="." instance=ExtResource("2_x10lc")]
position = Vector2(1440, 895)

[node name="StaticBody2D2" parent="." instance=ExtResource("2_x10lc")]
position = Vector2(365, 887)

[node name="StaticBody2D3" parent="." instance=ExtResource("2_x10lc")]
position = Vector2(426, 191)

[node name="StaticBody2D6" parent="." instance=ExtResource("2_x10lc")]
position = Vector2(1183, 184)

[node name="StaticBody2D7" parent="." instance=ExtResource("2_x10lc")]
position = Vector2(1072, 189)

[node name="gameover" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="gameover"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0509804, 0.0509804, 0.333333)

[node name="Label" type="Label" parent="gameover/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -11.5
offset_right = 46.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "GAME OVER"

[node name="score" type="CanvasLayer" parent="."]

[node name="score_display" type="Label" parent="score"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1000.0
offset_top = -6.0
offset_right = -949.0
offset_bottom = 118.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
text = "0"

[connection signal="health_depleted" from="Player1" to="." method="_on_player_1_health_depleted"]
[connection signal="timeout" from="Player1/Path2D/Timer" to="." method="_on_timer_timeout"]
